syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "RolePrincipalProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

message RolePrincipal {
  required string role_id = 1;
  required int32  principal_type = 2;
  required int32  principal_source = 3;
  required string principal_id = 4;
}


message RolePrincipalUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required RolePrincipal role_principal = 1;
}